--- a/client/src/components/ThemeToggle.css
+++ b/client/src/components/ThemeToggle.css
@@ -32,6 +32,7 @@
 
 .theme-toggle:hover .theme-icon {
   transform: rotate(15deg);
+  color: var(--primary-color);
 }
 
 /* Dark mode specific styles */
